# CDSLUoS_franka

./: .gitignore  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  FrankaTargets.cmake  README.md  plot.py  readme.txt
3dof_sim1/: pd1.txt_timing.txt  pd2.txt  pd2.txt_timing.txt  qp1.txt  qp1.txt_timing.txt  qp2.txt  qp2.txt_timing.txt  qp3.txt  qp3.txt_timing.txt  qp4.txt  qp4.txt_timing.txt  qp5.txt  qp5.txt_timing.txt  qp6.txt  qp6.txt_timing.txt  qp7.txt  qp7.txt_timing.txt  qp8.txt  qp8.txt_timing.txt
a2_data/: cartesian_position.py  plot4.py  pos_plot.py  pos_plot_multi.py  rms.py  time.py
a2_data/sim1/: pd1.txt  pd2.txt  pd3.txt  pd4.txt  pd5.txt  pd6.txt  pd7.txt  pd8.txt  qp1.txt  qp2.txt  qp3.txt  qp4.txt  qp5.txt  qp6.txt  qp7.txt  qp8.txt
a2_data/sim2/: pd1.txt  qp1.txt  qp2.txt  qp3.txt  qp4.txt
a2_data/sim3/: pd1.txt  qp1.txt
a2_data/sim4/: pd1.txt  qp1.txt  qp10.txt  qp11.txt  qp12.txt  qp2.txt  qp3.txt  qp4.txt  qp5.txt  qp6.txt  qp7.txt  qp8.txt  qp9.txt
a2_data/sim5/lspb/: pd1.txt  pd2.txt  pd3.txt  qp1.txt  qp2.txt  qp3.txt
a2_data/sim5/scurve/: pd1.txt  pd2.txt  pd3.txt  pd4.txt  pd5.txt  pd6.txt  pdd.txt  qp1.txt  qp2.txt  qp3.txt  qp4.txt  qp5.txt  qp6.txt  qpp.txt
a2_data/sim6/quintic/: pd5.txt_timing.txt  pd6.txt_timing.txt  qp1.txt  qp1.txt_timing.txt  qp10.txt_timing.txt  qp11.txt_timing.txt  qp12.txt  qp12.txt_timing.txt  qp2.txt_timing.txt  qp3.txt_timing.txt  qp4.txt_timing.txt  qp5.txt_timing.txt  qp6.txt_timing.txt  qp7.txt_timing.txt  qp8.txt_timing.txt  qp9.txt_timing.txt
examples/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  FrankaTargets.cmake  QPC_controller.cpp  QPC_controller_3dof.cpp  QPC_controller_time.cpp  data.txt  hp_cartesian_FL_CLBF.cpp  hp_custom_cartesian_FL.cpp  lspb.h  robot_state_recording.cpp  scurve.h  ys_trajectory_generator.h
examples/hc_CLBFs/: hp_cartesian_FL_CLBF.cpp  my_custom_controller_hp.cpp
examples/hc_CLBFs/sigmoid_clbf/: sigmoid_clbf.cpp  sigmoid_clbf.h
examples/ys_QPCs/: QPC_controller_3dof.cpp
hc_data/: ee_state_plot.py  test.txt
hc_data/FLtest/: FLtest_t1.txt  plot.py
hc_data/RPY_transfer/: plot.py
hc_data/ornt_test_i5/: plot.py
hc_data/ref_gen_test/: plot.py  refgentest.txt  refgentest_2.txt
